methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:8: error: ';' expected but '(' found.
  avance();gauche():avance()
                          ^